refined the discription

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=YVdhsF"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=YVdhsF" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=UiYnb2"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=UiYnb2" type="text/css">
 
   
   
@@ -35,7 +35,7 @@
 				<h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1"><strong>LET'S EXPLORE THE WORLD WITH ME</strong></h1>
 				
 				<p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">welcome to my personal web page!</p>
-				<div class="mbr-section-btn"><a class="btn btn-white display-7" href="Home.html">get started!</a></div>
+				<div class="mbr-section-btn"><a class="btn btn-black-outline display-7" href="Home.html">get started!</a></div>
 			</div>
 		</div>
 	</div>
