--- a/Research.html
+++ b/Research.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=7a9H1u"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=7a9H1u" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=eUbsbC"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=eUbsbC" type="text/css">
 
   
   
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="page2.html#testimonials1-5">HOME</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="Home.html">HOME</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -45,7 +45,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Error.html">Calendar</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://calendar.app.google/nm62xcfsrZwcJJQA8">Calendar</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary show display-4" href="Research.html" aria-expanded="false">Projects</a></li>
                     <li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle display-4" href="assets/files/CV_LI-SONGCHEN.pdf" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">About me</a><div class="dropdown-menu" aria-labelledby="dropdown-754"><a class="text-black text-primary dropdown-item display-4" href="assets/files/CV_LI-SONGCHEN.pdf">CV</a><a class="text-black text-primary dropdown-item display-4" href="Home.html#content5-7">Bio</a></div>
                     </li></ul>
@@ -86,7 +86,7 @@
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"><strong>Project Lead</strong></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">I conducted a project to improve TC forecast provided by CMA, it will be published soon!</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="Error.html" class="btn item-btn btn-primary display-7" target="_blank">Read More
+                    <div class="mbr-section-btn item-footer mt-2"><a href="TC.html" class="btn item-btn btn-primary display-7" target="_blank">Read More
                             &gt;</a></div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
 
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3543512" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3543512" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
