--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=knOK4D"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=knOK4D" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=0JQaby"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=0JQaby" type="text/css">
 
   
   
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="https://calendar.app.google/nm62xcfsrZwcJJQA8">Calendar</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary show display-4" href="Research.html" aria-expanded="false">Projects</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle display-4" href="assets/files/CV_LI-SONGCHEN.pdf" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">About me</a><div class="dropdown-menu" aria-labelledby="dropdown-754"><a class="text-black text-primary dropdown-item display-4" href="assets/files/CV_LI-SONGCHEN.pdf">CV</a><a class="text-black text-primary dropdown-item display-4" href="Home.html#content5-7">Bio</a></div>
+                    <li class="nav-item dropdown"><a class="nav-link link text-black text-primary dropdown-toggle show display-4" href="assets/files/CV_LI-SONGCHEN.pdf" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">About me</a><div class="dropdown-menu show" aria-labelledby="dropdown-754" data-bs-popper="none"><a class="text-black text-primary dropdown-item display-4" href="assets/files/CV_LI-SONGCHEN.pdf">CV</a><a class="text-black text-primary dropdown-item display-4" href="Home.html#content5-7">Bio</a></div>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://github.com/S0ngchen/AS-notes" target="_blank">
@@ -99,11 +99,11 @@
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">Something about me</h4>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    I am an undergraduate in <a href="https://en.nuist.edu.cn/main.psp" class="text-warning">Nanjing University of Information, Science and Technology</a>, majoring Atmospheric Science. I am particularly interested in <a href="TC.html" class="text-warning text-primary">tropical cyclones</a>, numerical modeling and boundary layers. I did some research on TC forecast and worked for some visualization job.<br><br>I am open to any potential&nbsp; academic collaboration. If you are interested in me, please don't hesitate to contact me!&nbsp;</p>
+                    I am an undergraduate in <a href="https://en.nuist.edu.cn/main.psp" class="text-warning">Nanjing University of Information, Science and Technology</a>&nbsp;(<a href="https://en.wikipedia.org/wiki/Double_First-Class_Construction" class="text-warning">Double First-Class Construction</a>), majoring Atmospheric Science. I am particularly interested in <a href="TC.html" class="text-warning text-primary">tropical cyclones</a>, numerical modeling and boundary layers. I did some research on TC forecast and worked for some visualization job.<br><br>I am open to any potential&nbsp; academic collaboration. If you are interested in me, please don't hesitate to contact me!&nbsp;</p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3543512" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3543512" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Builder Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
