--- a/DT.html
+++ b/DT.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=kgGNyX"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=kgGNyX" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=oIi5Fg"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=oIi5Fg" type="text/css">
 
   
   
@@ -70,11 +70,11 @@
 
 <section data-bs-version="5.1" class="slider1 cid-usQdfNpB8E" id="slider1-r">
     
-    <div class="carousel slide" id="usSdtQ2ZsN" data-interval="5000" data-bs-interval="5000">
+    <div class="carousel slide" id="usShxvtNnv" data-interval="5000" data-bs-interval="5000">
         <ol class="carousel-indicators">
-            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#usSdtQ2ZsN" data-bs-target="#usSdtQ2ZsN"></li>
-            <li data-slide-to="1" data-bs-slide-to="1" data-target="#usSdtQ2ZsN" data-bs-target="#usSdtQ2ZsN"></li>
-            <li data-slide-to="2" data-bs-slide-to="2" data-target="#usSdtQ2ZsN" data-bs-target="#usSdtQ2ZsN"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#usSdtQ2ZsN" data-bs-target="#usSdtQ2ZsN"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#usSdtQ2ZsN" data-bs-target="#usSdtQ2ZsN"></li>
+            <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#usShxvtNnv" data-bs-target="#usShxvtNnv"></li>
+            <li data-slide-to="1" data-bs-slide-to="1" data-target="#usShxvtNnv" data-bs-target="#usShxvtNnv"></li>
+            <li data-slide-to="2" data-bs-slide-to="2" data-target="#usShxvtNnv" data-bs-target="#usShxvtNnv"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#usShxvtNnv" data-bs-target="#usShxvtNnv"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#usShxvtNnv" data-bs-target="#usShxvtNnv"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item slider-image item active">
@@ -126,11 +126,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#usSdtQ2ZsN">
+        <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#usShxvtNnv">
             <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Previous</span>
         </a>
-        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#usSdtQ2ZsN">
+        <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#usShxvtNnv">
             <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
             <span class="sr-only visually-hidden">Next</span>
         </a>
@@ -150,3 +150,8 @@
             </div>
         </div>
     </div>
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3543512" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+  
+  
+</body>
+</html>
